--- a/css/main.css
+++ b/css/main.css
@@ -3,6 +3,20 @@ body {
   color: #333;
   box-sizing: border-box;
 }
+button {
+  background-color: rgb(86, 123, 149);
+  border: 1px solid rgb(50, 104, 145);
+  border-radius: 3px;
+  color: white;
+  text-transform: uppercase;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 10px;
+  font-weight: bold;
+  letter-spacing: -0.3px;
+}
+button:hover {
+  background-color: rgb(50, 104, 145);
+}
 
 /* NAVBAR TOP */
 
@@ -46,45 +60,282 @@ nav.top button {
   margin-left: auto;
   margin: 2px;
   padding: 8px 12px;
-  background-color: rgb(86, 123, 149);
-  border: 1px solid rgb(50, 104, 145);
-  border-radius: 3px;
-  color: white;
-  text-transform: uppercase;
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 10px;
-  font-weight: bold;
-  letter-spacing: -0.3px;
 }
 
 /* MAIN */
 
 main {
   margin: 42px 0 55px 0;
-  background-color: rgb(218, 218, 255);
 }
 
 /* ARTICLE */
 
-article {
-  background-color: rgb(214, 254, 255);
+article .caption {
+  font-size: 16px;
+  line-height: 1.1;
+  max-width: 720px;
+  color: #666;
 }
+article .caption .credit {
+  font-size: 14px;
+  padding-left: 5px;
+}
+article .social-media {
+  text-decoration: none;
+  color: #333;
+  font-weight: bold;
+  font-size: 30px;
+}
+ article .social-media:hover {
+  color: #888;
+}
+
   /* HEADER */
 
 header {
-  background-color: rgb(255, 243, 220);
+  padding-top: 60px;
+  display: grid;
+  grid-template-columns: 2fr 3fr [start] 600px [end] 3fr 2fr;
+}
+header h1 {
+  grid-column: start / end;
+  font-size: 35px;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-style: italic;
+  font-weight: bold;
+}
+header figure {
+  grid-column: 2 / -2;
+  margin: 30px 0;
+}
+header figure img {
+  width: 100%
+}
+header figcaption {
+  max-width: 720px;
+}
+header h5 {
+  grid-column: start / end;
+  font-family: Helvetica, Arial, sans-serif;
+  font-weight: bold;
+  font-size: 14px;
+}
+header h5 a {
+  color: #333;
+}
+header h5 a:hover {
+  text-decoration: none;
+}
+header .date-links {
+  grid-column: start / end;
+  display: flex;
+  align-items: center;
+  margin: 20px 0;
+}
+header .date-links h6 {
+  flex: 1;
+  font-size: 13px;
+}
+header .date-links a {
+  flex-basis: 35px;
+}
+header .date-links a:last-child {
+  font-size: 13px;
+  flex-basis: 20px;
+  padding: 5px;
+  border: 1px solid;
+  border-radius: 3px;
+  text-decoration: none;
+  color: #333;
 }
 
   /* SECTION */
 
-section {
-  background-color: rgb(255, 220, 226);
+section.content {
+  display: grid;
+  grid-template-columns: 1fr [start] 600px [end] 1fr;
+}
+section.content > * {
+  grid-column: start / end;
+}
+section.content > p {
+  font-size: 22px;
+  line-height: 1.3;
+  margin-bottom: 20px;
+}
+section.content > p > a {
+  color: #326891;
+}
+section.content > h2 {
+  font-size: 22px;
+  font-weight: bold;
+  margin: 10px 0 20px 0;
+}
+section.content .image img {
+  width: 100%;
+}
+section.content .caption {
+  max-width: 580px;
+}
+section.content .graphic,
+section.content .image,
+section.content .video {
+  margin: 30px 0 50px 0;
+}
+
+    /* SUBSCRIBE */
+
+section.content .subscribe {
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: bold;
+  text-align: center;
+  line-height: 1.3;
+  font-size: 14px;
+  margin: 10px 0 30px 0;
+}
+section.content .subscribe a {
+  text-decoration: none;
+  color: rgb(50, 104, 145);
+}
+section.content .subscribe::before,
+section.content .subscribe::after {
+  content: '';
+  width: 50px;
+  border-top: 1px solid #CCC;
+  display: block;
+  padding: 8px;
+  margin: auto;
+}
+section.content .subscribe::after {
+  border-top: none;
+  border-bottom: 1px solid #CCC;
+}
+
+    /* ASIDE */
+
+section.content .side {
+  grid-column: end / -1;
+  grid-row: span 3;
+  align-self: center;
+  padding-left: 50px;
+  width: 210px;
+}
+section.content .side h4 {
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: bold;
+  font-size: 13px;
+  padding-bottom: 10px;
+  border-bottom: 1px solid #CCC;
+}
+section.content .side figure {
+  margin-top: 15px;
+  margin-bottom: 0px;
+  overflow: auto;
+}
+section.content .side img {
+  width: 75px;
+  float: left;
+  margin-right: 8px;
+}
+section.content .side figcaption {
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-size: 14px;
+  line-height: 1.4;
+}
+
+    /* GRAPHIC */
+
+section.content .graphic {
+  grid-column: 1 / -1;
+  width: 945px;
+  margin-left: auto;
+  margin-right: auto;
+}
+section.content .graphic h3 {
+  font-size: 18px;
+  font-weight: bold;
+}
+section.content .graphic .intro {
+  font-size: 16px;
+  color: #666;
+  margin: 10px 0;
+}
+section.content .graphic-image {
+  grid-column: 1 / -1;
+  background-image: url("/images/inflation.png");
+  background-attachment: #FFF;
+  width: 100%;
+  height: 575px;
+  background-size: cover;
+  font-family: Helvetica, Arial, sans-serif;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(4, 1fr)
+}
+section.content .empty {
+  grid-column: span 4;
+}
+section.content .inflation {
+  font-size: 14px;
+  padding: 5px;
+  line-height: 1.3;
+}
+section.content .inflation strong {
+  font-weight: bold;
+  padding-right: 10px;
+}
+section.content .graphic .authors {
+  font-size: 14px;
+  font-family: Helvetica, Arial, sans-serif;
+}
+section.content .graphic .authors::before {
+  content: "";
+  width: 50px;
+  margin-top: 15px;
+  padding-top: 15px;
+  border-top: 1px solid;
+  display: block;
 }
 
   /* ARTICLE-BOTTOM */
 
 .bottom-info, .bottom-links {
-  background-color: rgb(255, 211, 255);
+  width: 600px;
+  margin: auto;
+}
+.bottom-info {
+  font-family: Helvetica, Arial, sans-serif;
+  font-size: 12px;
+  color: #666;
+  line-height: 1.4;
+  margin-bottom: 20px;
+}
+.bottom-info a {
+  color: #666;
+}
+.bottom-info a:hover {
+  text-decoration: none;
+}
+.bottom-links {
+  display: flex;
+  align-items: center;
+}
+.bottom-links span {
+  flex: 1;
+}
+.bottom-links button {
+  width: 330px;
+  padding: 10px 0;
+  font-size: 13px;
+}
+.bottom-links a {
+  flex-basis: 35px;
+}
+
+/* ASIDE */
+
+aside.bottom {
+  background-color: rgb(206, 206, 255);
 }
 
 /* FOOTER */
